--- a/css/styles.css
+++ b/css/styles.css
@@ -38,38 +38,34 @@ body {
 
   /**/
   
-  
-  .hero {
-    background-color: #f7f7f7;
-    padding: 20px;
+  .hero-image-container {
+    position: relative;
     text-align: center;
-  }
-  
-  .hero h1 {
-    font-size: 36px;
-    margin-bottom: 10px;
-  }
-  
-  .hero img {
-    width: 100%;
-    height: 300px;
-    object-fit: cover;
-    margin-bottom: 20px;
-  }
-  
-  .reservar {
-    background-color: #333;
-    color: #fff;
-    border: none;
+}
+
+.hero-image-container img {
+    width: 100%; /* Ajusta según sea necesario */
+    height: auto; /* Mantiene la proporción de la imagen */
+}
+
+.reservar {
+    position: absolute;
+    bottom: 20px; /* Ajusta la posición vertical del botón */
+    left: 50%;
+    transform: translateX(-50%);
     padding: 10px 20px;
-    font-size: 18px;
+    font-size: 16px;
+    background-color: #ff5733; /* Cambia el color de fondo según tu diseño */
+    color: white;
+    border: none;
+    border-radius: 5px;
     cursor: pointer;
-  }
-  
-  .reservar:hover {
-    background-color: #444;
-  }
-  
+}
+
+.reservar:hover {
+    background-color: #c70000; /* Cambia el color al pasar el ratón */
+}
+
   .galeria {
     display: flex;
     flex-wrap: wrap;
