--- a/css/registrarse.css
+++ b/css/registrarse.css
@@ -1,44 +1,4 @@
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-  }
-  
-    
-  nav {
-    background-color: #f2f2f2;   
-    overflow: hidden;   
-  }
-  
-  nav ul {
-    list-style-type: none;   
-    margin: 0;
-    padding: 0;
-    display: flex;   
-    justify-content: center;   
-  }
-  
-  nav li {
-    float: left;   
-  }
-  
-  nav li a {
-    display: block;   
-    color: #333;   
-    text-align: center;   
-    padding: 14px 16px;   
-    text-decoration: none;   
-  }
-  
-    
-  nav li a:hover {
-    background-color: #ddd; 
-  }
-
-
-  /**/
-
-  
+/* General Styles */
 * {
     margin: 0;
     padding: 0;
@@ -48,14 +8,47 @@ body {
 
 body {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background: url('https://png.pngtree.com/thumb_back/fw800/background/20231231/pngtree-vector-illustration-of-a-restaurant-menu-design-with-food-and-drinks-image_13914731.png');
+    background: url('https://png.pngtree.com/thumb_back/fw800/background/20231231/pngtree-vector-illustration-of-a-restaurant-menu-design-with-food-and-drinks-image_13914731.png') no-repeat center center fixed;
+    background-size: cover;
     margin: 0;
-    font-family: Arial, sans-serif;
 }
 
+/* Navigation Styles */
+nav {
+    background-color: #f2f2f2;   
+    overflow: hidden;   
+    width: 100%;
+}
+
+nav ul {
+    list-style-type: none;   
+    margin: 0;
+    padding: 0;
+    display: flex;   
+    justify-content: center;   
+}
+
+nav li {
+    float: left;   
+}
+
+nav li a {
+    display: block;   
+    color: #333;   
+    text-align: center;   
+    padding: 14px 16px;   
+    text-decoration: none;   
+}
+
+nav li a:hover {
+    background-color: #ddd; 
+}
+
+/* Login Form Styles */
 .login-container {
     width: 100%;
     max-width: 500px;
