--- a/css/registrarse.css
+++ b/css/registrarse.css
@@ -12,7 +12,7 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background: url('https://png.pngtree.com/thumb_back/fw800/background/20231231/pngtree-vector-illustration-of-a-restaurant-menu-design-with-food-and-drinks-image_13914731.png') no-repeat center center fixed;
+    background: url() ;
     background-size: cover;
     margin: 0;
 }
